# gazebo_harmonic_ardupilot

./: .gitignore  run_ardupilot_sitl.sh  run_gazebo.sh  run_with_ardupilot.sh
config/ardupilot/: terrain_gazebo_iris.parm
models/pine_tree/: ATTRIBUTION.md  (+1 more)
ros2_ws/: .gitignore
ros2_ws/src/terrain_mapping_system/: package.xml  setup.cfg  setup.py
ros2_ws/src/terrain_mapping_system/config/: bridge_defaults.yaml  dem_mapper.yaml  mission_controller.yaml
ros2_ws/src/terrain_mapping_system/launch/: full_stack.launch.py  mission_control.launch.py  sim_bridge.launch.py
ros2_ws/src/terrain_mapping_system/terrain_mapping_system/: paths.py
ros2_ws/src/terrain_mapping_system/terrain_mapping_system/mapping/: __init__.py  dem.py
ros2_ws/src/terrain_mapping_system/terrain_mapping_system/mission/: __init__.py  artifacts.py  conversions.py  mavlink_adapter.py  planner.py  terrain_manifest.py
ros2_ws/src/terrain_mapping_system/terrain_mapping_system/nodes/: dem_mapper.py  mission_controller.py  pose_adapter.py
ros2_ws/src/terrain_mapping_system/terrain_mapping_system/validation/: __init__.py  batch.py  common.py  evaluator.py
ros2_ws/src/terrain_mapping_system/test/: test_coverage_planner.py  test_dem_rasterization.py  test_frame_conversions.py  test_mavlink_adapter.py  test_project_contracts.py  test_run_evaluator.py  test_terrain_manifest_compat.py
scripts/: generate_heightmap_world.py  generate_random_terrain_harmonic.py  generate_run_summary.py  inspect_topics.sh
worlds/: generated_world.sdf  random_terrain.sdf  random_terrain_ardupilot.sdf  terrain_mesh.mtl
(+430 files in other folders)
